--- a/doc/src/examples/index.page
+++ b/doc/src/examples/index.page
@@ -1,6 +1,6 @@
 ---
 title: Overview
-longTitle: Constraint programming problems solved using Gecode/R
+longTitle: Constraint Programming Problems Solved using Gecode/R
 inMenu: true
 description: Examples of how to use Gecode/R to solve problems using constraint programming in Ruby.
 ---
