--- a/doc/src/sitemap.page
+++ b/doc/src/sitemap.page
@@ -1,6 +1,6 @@
 ---
 title: Sitemap
-longTitle: Sitemap of Gecode/R project pages
+longTitle: Sitemap of the Gecode/R Website
 inMenu: false
 description: A sitemap showing all the pages of the site.
 ---
