--- a/doc/src/details/changes.page
+++ b/doc/src/details/changes.page
@@ -1,7 +1,7 @@
 ---
 title: Changes
 useERB: true
-longTitle: Changes made to Gecode/R
+longTitle: Changes Made to Gecode/R
 inMenu: true
 description: A changelog of changes made to Gecode/R. Shows when support for various constraints were added.
 ---
