--- a/doc/src/details/contribute.page
+++ b/doc/src/details/contribute.page
@@ -1,6 +1,6 @@
 ---
 title: Contribute
-longTitle: How to contribute to Gecode/R
+longTitle: How to Contribute to Gecode/R
 inMenu: true
 description: How to contribute to the development of Gecode/R, a Ruby interface to the Gecode constraint programming library.
 ---
@@ -22,14 +22,14 @@ Use "gecoder-users":http://rubyforge.org/mailman/listinfo/gecoder-users for such
 feedback (just send a mail there if you want to, there's no need to sign up). 
 Subscribe to that mailing list and be helpful to contribute even more.
 
-h2. Report bugs
+h2. Report Bugs
 
 Report bugs to "the bug 
 tracker":http://rubyforge.org/tracker/?atid=13720&group_id=3553&func=browse.
 Make sure that you include enough information for others to be able to reproduce
 the bug.
 
-h2. Submit patches
+h2. Submit Patches
 
 Send your patches to "the patch 
 tracker":http://rubyforge.org/tracker/?atid=13722&group_id=3553&func=browse, 
@@ -37,7 +37,7 @@ preferably as diffs against the current trunk. If you make a habit of sending
 good patches then we will just save us the hassle and give you direct commit 
 access.
 
-h2. Add feature requests
+h2. Add Feature Requests
 
 If you have an idea for a feature, but can't implement it yourself, then send
 it to "the feature request 
