--- a/doc/src/details/development.page
+++ b/doc/src/details/development.page
@@ -1,13 +1,13 @@
 ---
 title: Development
-longTitle: Development of Gecode/R, a Ruby interface to Gecode
+longTitle: Development of Gecode/R, a Ruby Interface to Gecode
 inMenu: true
 description: The current developments of Gecode/R, a Ruby interface to the Gecode constraint programming library.
 ---
 
 h1. Development
 
-h2. Design goals
+h2. Design Goals
 
 Gecode/R is designed to be readable, easy to learn and use without previous
 knowledge of constraint programming. Some times that comes at the cost of 
@@ -15,7 +15,7 @@ brevity, performance and user control. The ambition is that code using the
 interface should be readable enough to allow a new user to understand it 
 without having to look in the API documentation.
 
-h2. Development status
+h2. Development Status
 
 The project has working releases and currently "supports many of 
 the constraints available in Gecode":../features.html.
@@ -25,7 +25,7 @@ no further additions are likely until after version 1.0 has been released.
 The current focus is to polish the documentation and to ensure that 
 everything is stable before releasing version 1.0 .
 
-h2. Future goals
+h2. Future Goals
 
 h3. Beyond 1.0
 
